# commandguard

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  detection_case.md
.github/workflows/: ci.yml
bench/benign/developer-tutorials/: rustup-info.sh
bench/benign/distribution-documentation/: apt-install.sh
bench/benign/troubleshooting/: list-logs.sh
bench/malicious/credential-theft/: ssh-key-exfil.sh
bench/malicious/download-execute/: base64-pipe-bash.sh  curl-pipe-bash.sh
bench/malicious/persistence/: bashrc-write.sh
bench/mutations/encoding/: hex-to-sh.sh
bench/mutations/variable-indirection/: download-then-exec.sh
docs/: beginner-guide.md  developer-guide.md  examples.md  how-it-works.md  repository-profile.md  roadmap.md  security-model.md
src/: analyzer.rs  bench.rs  cli.rs  decoder.rs  guard.rs  lib.rs  main.rs  model.rs  warning.rs
