[package]
name = "commandguard"
version = "0.1.0"
edition = "2021"
description = "Semantic paste firewall for Linux terminals that warns before risky copied shell commands run"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/commandguard"
keywords = ["linux", "terminal", "security", "pastejacking", "bash"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
exclude = ["/target", "/.github"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
flate2 = "1"
hex = "0.4"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

[dev-dependencies]
pretty_assertions = "1"
